feat: update github token